--- a/CaliforniaHousePricing.ipynb
+++ b/CaliforniaHousePricing.ipynb
@@ -1529,6 +1529,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([84.33102212])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(housing.data[0].reshape(1,-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {
     "colab": {
